Bug 11472: about:tor logo and text may overlap.
This problem occurred in some non-English locales (e.g., de).
We now reduce the font size of some elements if necessary.

--- a/src/chrome/skin/aboutTor.css
+++ b/src/chrome/skin/aboutTor.css
@@ -135,6 +135,8 @@ body .top div.hideIfTorIsUpToDate h1.hideIfTorOff {
   margin-left: 30px;
 }
 
+/* Use inline-block for text-oriented elements whose widths need to measured. */
+.torstatus-container *,
 .top div.hideIfTorIsUpToDate h3 {
   display: inline-block;
 }
